--- a/pages/misc/elementstable.liquid
+++ b/pages/misc/elementstable.liquid
@@ -5,19 +5,20 @@ title: Periodic elements table
 {% assign filename = page.fileSlug %}
 <section id="{{ filename }}" class="section">
 <div class="section-heading">
-            <a class="d-flex justify-content-between section-toggle text-decoration-none d-none pt-4 pb-3 px-2 px-sm-4"
-                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="true" aria-controls="{{ filename }}Collapse"
-                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
-                <h2 class="display-6 w-100 d-flex m-0">
-                    Periodic elements
-                </h2>
-                <span class="text-light px-1 border rounded align-self-end toggle-button" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Collapse section">
-                    <i class="bi bi-arrow-up lh-base"></i>
-                </span>
-            </a>
-            <hr class="d-none my-0 mx-4">
+        <a class="d-flex justify-content-between section-toggle text-decoration-none d-none pt-4 pb-3 px-2 px-sm-4"
+            data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+            aria-expanded="true" aria-controls="{{ filename }}Collapse"
+            data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
+            <h2 class="display-6 w-100 d-flex m-0">
+                Periodic elements
+            </h2>
+            <span class="text-light px-1 border rounded align-self-end toggle-button" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Collapse section">
+                <i class="bi bi-arrow-up lh-base"></i>
+            </span>
+        </a>
+        <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
+            <p class="px-2">
                 An interactive periodic table of elements, click each element to display a table of related information. Not in the usual format, as creating a scalable grid in the same shape just didn't seem feasible.
             </p>
             <p class="px-2">
@@ -33,72 +34,72 @@ title: Periodic elements table
         </div>
     </div>
     <div class="pb-4 px-2 px-sm-4 collapse show" id="{{ filename }}Collapse">
-            <div class="col">
-                <div class="card">
-                    <span class="card-label visually-hidden">Periodic elements</span>
-                    <div class="card-body text-center">
-                        <div class="d-flex flex-wrap elements-grid" style="gap:0.5rem;">
-                            {% for el in elements %}
-                                <button type="button" class="p-element g-col-1 position-relative p-1 btn btn-outline-convrtr border border-3 border-convrtr rounded-2" data-element="{{el.number}}" data-phase="{{el.phase}}" data-group="{{el.group}}" data-period="{{el.period}}" data-block="{{el.block}}">
-                                    <div class="p-element__number fs-6 position-absolute top-0 end-0 px-2 py-1" aria-hidden="true">{{ el.number }}</div>
-                                    <div class="p-element__symbol display-6" aria-hidden="true">{{ el.symbol }}</div>
-                                    <div class="p-element__name">{{ el.name }}</div>
-                                </button>
-                            {% endfor %}
-                        </div>
+        <div class="col">
+            <div class="card">
+                <span class="card-label visually-hidden">Periodic elements</span>
+                <div class="card-body text-center">
+                    <div class="d-flex flex-wrap elements-grid" style="gap:0.5rem;">
+                        {% for el in elements %}
+                            <button type="button" class="p-element g-col-1 position-relative p-1 btn btn-outline-convrtr border border-3 border-convrtr rounded-2" data-element="{{el.number}}" data-phase="{{el.phase}}" data-group="{{el.group}}" data-period="{{el.period}}" data-block="{{el.block}}">
+                                <div class="p-element__number fs-6 position-absolute top-0 end-0 px-2 py-1" aria-hidden="true">{{ el.number }}</div>
+                                <div class="p-element__symbol display-6" aria-hidden="true">{{ el.symbol }}</div>
+                                <div class="p-element__name">{{ el.name }}</div>
+                            </button>
+                        {% endfor %}
                     </div>
-                    <div class="card-footer py-3">
-                        <div class="row row-cols-2 g-md-0 gx-0 gy-2">
-                            <div class="col col-12 col-lg-auto me-2">
-                                <div class="input-group w-auto">
-                                    <label class="input-group-text" for="{{ filename }}Filter">Filter by <span class="visually-hidden">element properties</span></label>
-                                    <select class="form-select" id="{{ filename }}Filter" autocomplete="off">
-                                        <option value="all">All</option>
-                                        <option value="phase-Solid">Solid</option>
-                                        <option value="phase-Liquid">Liquid</option>
-                                        <option value="phase-Gas">Gas</option>
-                                        <option value="block-s">Block s</option>
-                                        <option value="block-p">Block p</option>
-                                        <option value="block-d">Block d</option>
-                                        <option value="block-f">Block f</option>
-                                        <option value="period-1">Period 1</option>
-                                        <option value="period-2">Period 2</option>
-                                        <option value="period-3">Period 3</option>
-                                        <option value="period-4">Period 4</option>
-                                        <option value="period-5">Period 5</option>
-                                        <option value="period-6">Period 6</option>
-                                        <option value="period-7">Period 7</option>
-                                        <option value="period-8">Period 8</option>
-                                        <option value="group-1">Group 1</option>
-                                        <option value="group-2">Group 2</option>
-                                        <option value="group-3">Group 3</option>
-                                        <option value="group-4">Group 4</option>
-                                        <option value="group-5">Group 5</option>
-                                        <option value="group-6">Group 6</option>
-                                        <option value="group-7">Group 7</option>
-                                        <option value="group-8">Group 8</option>
-                                        <option value="group-9">Group 9</option>
-                                        <option value="group-10">Group 10</option>
-                                        <option value="group-11">Group 11</option>
-                                        <option value="group-12">Group 12</option>
-                                        <option value="group-13">Group 13</option>
-                                        <option value="group-14">Group 14</option>
-                                        <option value="group-15">Group 15</option>
-                                        <option value="group-16">Group 16</option>
-                                        <option value="group-17">Group 17</option>
-                                        <option value="group-18">Group 18</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col d-flex flex-fill">
-                                {% include "components/select-copy-dl" %}
+                </div>
+                <div class="card-footer py-3">
+                    <div class="row row-cols-2 g-md-0 gx-0 gy-2">
+                        <div class="col col-12 col-lg-auto me-2">
+                            <div class="input-group w-auto">
+                                <label class="input-group-text" for="{{ filename }}Filter">Filter by <span class="visually-hidden">element properties</span></label>
+                                <select class="form-select" id="{{ filename }}Filter" autocomplete="off">
+                                    <option value="all">All</option>
+                                    <option value="phase-Solid">Solid</option>
+                                    <option value="phase-Liquid">Liquid</option>
+                                    <option value="phase-Gas">Gas</option>
+                                    <option value="block-s">Block s</option>
+                                    <option value="block-p">Block p</option>
+                                    <option value="block-d">Block d</option>
+                                    <option value="block-f">Block f</option>
+                                    <option value="period-1">Period 1</option>
+                                    <option value="period-2">Period 2</option>
+                                    <option value="period-3">Period 3</option>
+                                    <option value="period-4">Period 4</option>
+                                    <option value="period-5">Period 5</option>
+                                    <option value="period-6">Period 6</option>
+                                    <option value="period-7">Period 7</option>
+                                    <option value="period-8">Period 8</option>
+                                    <option value="group-1">Group 1</option>
+                                    <option value="group-2">Group 2</option>
+                                    <option value="group-3">Group 3</option>
+                                    <option value="group-4">Group 4</option>
+                                    <option value="group-5">Group 5</option>
+                                    <option value="group-6">Group 6</option>
+                                    <option value="group-7">Group 7</option>
+                                    <option value="group-8">Group 8</option>
+                                    <option value="group-9">Group 9</option>
+                                    <option value="group-10">Group 10</option>
+                                    <option value="group-11">Group 11</option>
+                                    <option value="group-12">Group 12</option>
+                                    <option value="group-13">Group 13</option>
+                                    <option value="group-14">Group 14</option>
+                                    <option value="group-15">Group 15</option>
+                                    <option value="group-16">Group 16</option>
+                                    <option value="group-17">Group 17</option>
+                                    <option value="group-18">Group 18</option>
+                                </select>
                             </div>
                         </div>
-                        <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results p-2"></div>
+                        <div class="col d-flex flex-fill">
+                            {% include "components/select-copy-dl" %}
+                        </div>
                     </div>
+                    <hr />
+                    <div id="{{ filename }}Results" class="data-to-copy active convrtr-results p-2"></div>
                 </div>
             </div>
         </div>
+    </div>
 </section>
 {% render "dynamic-script", page: page %}
