--- a/pages/text/frequencies.liquid
+++ b/pages/text/frequencies.liquid
@@ -18,6 +18,7 @@ title: Text frequencies
         </a>
         <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
+            <p class="px-2">
                 For a given string of text, list out the frequencies of various character combinations. This can be useful when looking at data-driven puzzles, and trying to find recognizable patterns.
             </p>
         </div>
