Adding stub page for accessibility statement
Additionally cleaned up the unsightly if statement for showing the data-limits fragment.
Updated format will make it easier to add and remove sections that should be excluded from showing

--- a/_includes/partials/default.liquid
+++ b/_includes/partials/default.liquid
@@ -18,10 +18,23 @@
                 {%- endfor %}
             </div>
             {%- endif -%}
-            {%- if page-id == "privacy" or page-id == "sitemap" or page.inputPath contains "tag" or page.inputPath contains "tags" or page-id != "sitemap" and page.inputPath contains "changelog" -%}
+            {%- assign excluded_ids = "privacy,accessibility,sitemap" | split: "," -%}
+            {%- assign excluded_fragments = "tag,tags,changelog" | split: "," -%}
+
+            {%- assign id_excluded = excluded_ids contains page-id -%}
+            {%- assign path_excluded = false -%}
+
+            {%- for fragment in excluded_fragments -%}
+            {%- if page.inputPath contains fragment -%}
+                {%- assign path_excluded = true -%}
+            {%- endif %}
+            {%- endfor -%}
+
+            {%- if id_excluded or path_excluded -%}
+                {%- comment -%} Do nothing {%- endcomment -%}
             {%- else -%}
-            {% render "components/data-limits" %}
-            {% endif %}
+                {% render "components/data-limits" %}
+            {%- endif %}
         </div>
     </div>
 </section>
