Fixed missing padding classes in files

--- a/pages/files/check.liquid
+++ b/pages/files/check.liquid
@@ -23,7 +23,7 @@ title: File check
                 Files are matches against the File headers table below and won't catch everything. Feel free to reach out if there's a header missing or one you think would be worth adding.
             </p>
         </div>
-        <div id="{{ filename }}Collapse" class="collapse show">
+        <div id="{{ filename }}Collapse" class="pb-4 px-2 px-sm-4 collapse show">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Check file headers</span>
@@ -31,7 +31,7 @@ title: File check
                         <div class="mb-3">
                             <label for="fileInput" class="form-label visually-hidden">Select a file</label>
                             <input class="form-control" type="file" id="fileInput">
-                          </div>
+                        </div>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
