--- a/pages/files/headers.liquid
+++ b/pages/files/headers.liquid
@@ -25,7 +25,7 @@ title: File headers
                 More information is available on the <a href="https://en.wikipedia.org/wiki/List_of_file_signatures" class="text-convrtr" title="List of file signatures, Wikipedia">File signatures</a> Wikipedia page.
             </p>
         </div>
-        <div id="{{ filename }}Collapse" class="collapse show">
+        <div id="{{ filename }}Collapse" class="pb-4 px-2 px-sm-4 collapse show">
             <div class="card">
                 <span class="card-label visually-hidden">File headers in hexadecimal format</span>
                 <div class="card-body py-3">
