Fixed missing styling on next/previous pagination links on mobile

--- a/_includes/components/pagination.liquid
+++ b/_includes/components/pagination.liquid
@@ -16,7 +16,7 @@
     {% else %}
         <li class="page-item disabled">
             <span class="page-link d-none d-sm-block">Previous</span>
-            <span class="d-block d-sm-none" aria-label="Previous">&#8678;</span>
+            <span class="page-link d-block d-sm-none" aria-label="Previous">&#8678;</span>
         </li>
     {% endif %}
 
@@ -53,7 +53,7 @@
     {% else %}
         <li class="page-item disabled">
             <span class="page-link d-none d-sm-block">Next</span>
-            <span class="d-block d-sm-none" aria-label="Next">&#8680;</span>
+            <span class="page-link d-block d-sm-none" aria-label="Next">&#8680;</span>
         </li>
     {% endif %}
     </ul>
