To fix potential accessibility issues with roles="switch" on inputs, ensure they have accessible label properties

--- a/pages/ciphers/keyword.liquid
+++ b/pages/ciphers/keyword.liquid
@@ -49,8 +49,8 @@ title: Keyword cipher
                                 <div class="row row-cols-auto g-0">
                                     <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                         <div class="form-check form-switch text-start">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="chainKw" aria-checked="false">
-                                            <label class="form-check-label" for="chainKw">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="chainKw" aria-checked="false" aria-labelledby="chainKwLabel">
+                                            <label class="form-check-label" id="chainKwLabel" for="chainKw">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                         </div>
                                     </div>
                                     <div class="col d-flex flex-fill justify-content-end">
