--- a/pages/ciphers/substitution.liquid
+++ b/pages/ciphers/substitution.liquid
@@ -85,8 +85,8 @@ title: Substitution cipher
                                 <div class="row row-cols-auto g-0">
                                     <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                         <div class="form-check form-switch text-start">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="chainSubs" aria-checked="false">
-                                            <label class="form-check-label" for="chainSubs">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="chainSubs" aria-checked="false" aria-labelledby="chainSubsLabel">
+                                            <label class="form-check-label" id="chainSubsLabel" for="chainSubs">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                         </div>
                                     </div>
                                     <div class="col d-flex flex-fill justify-content-end">
