--- a/pages/hex/reverse.liquid
+++ b/pages/hex/reverse.liquid
@@ -65,8 +65,8 @@ title: Hex reverse
                         </div>
                         <div class="row g-md-0 gx-0 gy-2">
                             <div class="form-check form-switch mx-lg-2 d-flex">
-                                <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Chain" aria-checked="false">
-                                <label class="form-check-label" for="{{ filename }}Chain">Chain <span class="visually-hidden" aria-hidden="true"
+                                <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Chain" aria-checked="false" aria-labelledby="{{ filename }}ChainLabel">
+                                <label class="form-check-label" id="{{ filename }}ChainLabel" for="{{ filename }}Chain">Chain <span class="visually-hidden" aria-hidden="true"
                                         focusable="true">{{ filename }}</span> commands</label>
                             </div>
                         </div>
