--- a/pages/misc/elements.liquid
+++ b/pages/misc/elements.liquid
@@ -69,8 +69,8 @@ title: Periodic elements
                             <div class="col d-flex flex-fill mb-2">
                                 <div class="me-auto flex-fill">
                                     <div class="form-check form-switch mx-lg-2 d-flex">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="removeDelimiters" aria-checked="false">
-                                        <label class="form-check-label" for="removeDelimiters">Remove delimiters</label>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="removeDelimiters" aria-checked="false" aria-labelledby="removeDelimitersLabel">
+                                        <label class="form-check-label" id="removeDelimitersLabel" for="removeDelimiters">Remove delimiters</label>
                                     </div>
                                 </div>
                                 {% include "components/select-copy-dl" %}
