--- a/pages/misc/forerunner.liquid
+++ b/pages/misc/forerunner.liquid
@@ -80,8 +80,8 @@ title: Forerunner glyphs
                                         <button role="button" class="btn btn-md btn-convrtr" id="generateForerunnerImage" title="Create an image from Forerunner glyphs">Create image</button>
                                     </div>
                                     <div class="form-check form-switch mx-2">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency" aria-checked="false">
-                                        <label class="form-check-label" for="frImageTransparency">Transparent background <span class="visually-hidden">for Forerunner image</span></label>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency" aria-checked="false" aria-labelledby="frImageTransparencyLabel">
+                                        <label class="form-check-label" id="frImageTransparencyLabel" for="frImageTransparency">Transparent background <span class="visually-hidden">for Forerunner image</span></label>
                                     </div>
                                 </div>
                             </div>
