--- a/_includes/components/chain-commands.liquid
+++ b/_includes/components/chain-commands.liquid
@@ -1,4 +1,4 @@
                                             <div class="form-check form-switch text-start">
-                                                <input class="form-check-input" type="checkbox" role="switch" id="chainAb" aria-checked="false">
-                                                <label class="form-check-label" for="chainAb">Chain <span class="visually-hidden">atbash </span>commands</label>
+                                                <input class="form-check-input" type="checkbox" role="switch" id="chainAb" aria-checked="false" aria-labelledby="chainAbLabel">
+                                                <label class="form-check-label" id="chainAbLabel" for="chainAb">Chain <span class="visually-hidden">atbash </span>commands</label>
                                             </div>
