--- a/pages/ciphers/atbash.liquid
+++ b/pages/ciphers/atbash.liquid
@@ -48,8 +48,8 @@ title: Atbash cipher
                                         <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode">Encrypt</button>
                                     </div>
                                     <div class="form-check form-switch text-start ms-2">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="chainAb" aria-checked="false">
-                                        <label class="form-check-label" for="chainAb">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="chainAb" aria-checked="false" aria-labelledby="chainAbLabel">
+                                        <label class="form-check-label" id="chainAbLabel" for="chainAb">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                     </div>
                                 </div>
                             </div>
