--- a/pages/ciphers/caesar.liquid
+++ b/pages/ciphers/caesar.liquid
@@ -80,8 +80,8 @@ title: Caesar cipher
                                 <div class="row row-cols-auto g-0">
                                     <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                         <div class="form-check form-switch text-start">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="chainRots" aria-checked="false">
-                                            <label class="form-check-label" for="chainRots">Chain <span class="visually-hidden">rotation </span>commands</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="chainRots" aria-checked="false" aria-labelledby="chainRotsLabel">
+                                            <label class="form-check-label" id="chainRotsLabel" for="chainRots">Chain <span class="visually-hidden">rotation </span>commands</label>
                                         </div>
                                     </div>
                                     <div class="col d-flex flex-fill justify-content-end">
