--- a/pages/ciphers/chaocipher.liquid
+++ b/pages/ciphers/chaocipher.liquid
@@ -52,8 +52,8 @@ title: Chaocipher
                                 <div class="row row-cols-auto g-0">
                                     <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                         <div class="form-check form-switch text-start ms-2">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="chain{{ filename | upperFirst }}" aria-checked="false">
-                                            <label class="form-check-label" for="chain{{ filename | upperFirst }}">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="chain{{ filename | upperFirst }}" aria-checked="false" aria-labelledby="chain{{ filename | upperFirst }}Label">
+                                            <label class="form-check-label" id="chain{{ filename | upperFirst }}Label" for="chain{{ filename | upperFirst }}">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                         </div>
                                     </div>
                                     <div class="col d-flex flex-fill justify-content-end">
