--- a/pages/ciphers/smithy.liquid
+++ b/pages/ciphers/smithy.liquid
@@ -53,8 +53,8 @@ title: Smithy cipher
                                 <div class="row row-cols-auto g-0">
                                     <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                         <div class="form-check form-switch text-start">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="chainSm" aria-checked="false">
-                                            <label class="form-check-label" for="chainSm">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="chainSm" aria-checked="false" aria-labelledby="chainSmLabel">
+                                            <label class="form-check-label" id="chainSmLabel" for="chainSm">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                         </div>
                                     </div>
                                     <div class="col d-flex flex-fill justify-content-end">
