--- a/pages/text/convrtrs.liquid
+++ b/pages/text/convrtrs.liquid
@@ -49,8 +49,8 @@ customPermalink: /convrtrs/
     <div class="pb-4 px-2 px-sm-4 collapse show" id="{{ filename }}Collapse">
         <div class="grid">
             <div class="form-check form-switch text-star g-col-12 mb-3">
-                <input class="form-check-input" type="checkbox" role="switch" id="chainDecoders" aria-checked="false">
-                <label class="form-check-label" for="chainDecoders">Chain decoders</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="chainDecoders" aria-checked="false" aria-labelledby="chainDecodersLebal">
+                <label class="form-check-label" id="chainDecodersLebal" for="chainDecoders">Chain decoders</label>
             </div>
         </div>
         <div class="grid g-3">
