--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,8 +10,6 @@
 @import "../node_modules/bootstrap-scss/mixins";
 @import "../node_modules/bootstrap-scss/utilities";
 @import "../node_modules/bootstrap-scss/root";
-@import "../node_modules/bootstrap-scss/grid";
-@import "../node_modules/bootstrap-scss/list-group";
 
 // Helpers
 @import "../node_modules/bootstrap-scss/helpers";
@@ -1240,19 +1238,19 @@ button.cc-nb-changep {
 }
 
 .hidden {
-    @extend .d-none;
+    @extend .d-none !optional;
 }
 
 .pagefind-ui__form {
-    @extend .input-group;
-    @extend .mb-3;
+    @extend .input-group !optional;
+    @extend .mb-3 !optional;
 
     .pagefind-ui__search-input {
-        @extend .form-control;
+        @extend .form-control !optional;
     }
 
     .pagefind-ui__search-clear {
-        @extend .btn;
+        @extend .btn !optional;
         @extend .btn-convrtr !optional;
         --bs-btn-border-radius: .5rem;
         border-top-right-radius: var(--bs-btn-border-radius) !important;
@@ -1260,37 +1258,38 @@ button.cc-nb-changep {
     }
 }
 .pagefind-ui__drawer {
-    @extend .w-100;
-    @extend .row;
+    @extend .w-100 !optional;
+    @extend .row !optional;
     margin-top: 1rem;
 }
 .pagefind-ui__message {
-    @extend .px-2;
+    @extend .px-2 !optional;
 }
 .pagefind-ui__results {
-    @extend .list-group;
-    @extend .list-group-flush;
+    @extend .list-group !optional;
+    @extend .list-group-flush !optional;
 }
 .pagefind-ui__result {
-    @extend .list-group-item;
-    @extend .list-group-item-action;
+    @extend .list-group-item !optional;
+    @extend .list-group-item-action !optional;
+    text-align: start;
 }
 .pagefind-ui__result-link {
     --bs-link-underline-opacity: 0;
-    @extend .text-convrtr-link;
+    @extend .text-convrtr-link !optional;
     font-weight: 500 !important;
     font-size: 1.15rem;
     text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
-    @extend .stretched-link;
+    @extend .stretched-link !optional;
 }
 .pagefind-ui__button {
     margin-top: 1rem;
-    @extend .btn;
-    @extend .btn-outline-convrtr;
+    @extend .btn !optional;
+    @extend .btn-outline-convrtr !optional;
 }
 .pagefind-ui__filter-panel,
 .pagefind-ui__results-area {
-    @extend .col-12;
+    @extend .col-12 !optional;
     padding: 0 !important;
 }
 @media (min-width:869px) {
@@ -1315,11 +1314,11 @@ button.cc-nb-changep {
     }
 }
 .pagefind-ui__filter-group {
-    @extend .list-group;
+    @extend .list-group !optional;
 }
 .pagefind-ui__filter-value {
-    @extend .list-group-item;
-    @extend .list-group-item-action;
+    @extend .list-group-item !optional;
+    @extend .list-group-item-action !optional;
     padding: 0;
 }
 .pagefind-ui__filter-name {
