--- a/pages/ciphers/atbash.liquid
+++ b/pages/ciphers/atbash.liquid
@@ -23,10 +23,10 @@ tags: tools
             <p class="px-2">
                 A simple substitution cipher that takes a string and transforms each letter to its mirror image in the alphabet. For example: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    A ⇆ Z
+                    A &lrarr; Z
                 </code>
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    B ⇆ Y
+                    B &lrarr; Y
                 </code>
                 etc.
             </p>
@@ -38,7 +38,7 @@ tags: tools
                 <span class="card-label visually-hidden">{{ filename | upperFirst }}</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">Atbash encrypt a string</label>
-                    <textarea placeholder="Example: (Hello ⇆ Svool)" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: (Hello &lrarr; Svool)" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="text-center mb-4 g-0">
